--- a/src/app/student/formation/formation.component.html
+++ b/src/app/student/formation/formation.component.html
@@ -1,19 +1,17 @@
 <mat-accordion>
   <mat-expansion-panel *ngFor="let itinerary of itinerarys">
-    <mat-expansion-panel-header (click)="openFormations(itinerary.getFormations())">
+    <mat-expansion-panel-header>
       <mat-panel-title>
         <b>{{itinerary.getName()}}</b>
       </mat-panel-title>
     </mat-expansion-panel-header>
-        <ul>
-          <li type=circle *ngFor="let formation of formations">It: {{formation.getName()}}</li>
-        </ul>
-        <ul>
-          <li type=disc *ngFor="let session of sessions">{{session.getName()}}
-            <ul>
-              <li *ngFor="let lesson of lessons" id="lesson"><a (click)="openLesson(lesson)">{{lesson.getName()}}</a></li>
-            </ul>
+    <ul>
+      <li *ngFor="let formation of itinerary.getFormations()" type=disc> {{formation.getName()}}
+        <ul *ngIf="!formation.formations">
+          <li *ngFor="let lesson of formation.getLessons()" id="lesson"><a (click)="openLesson(lesson)">{{lesson.getName()}}</a>
           </li>
         </ul>
+      </li>
+    </ul>
   </mat-expansion-panel>
 </mat-accordion>
