--- a/src/app/shared/chat-exercise/chat-exercise.component.html
+++ b/src/app/shared/chat-exercise/chat-exercise.component.html
@@ -5,7 +5,7 @@
     <mat-form-field class="infix">
         <input matInput #box type="text" placeholder="Escriba la respuesta" [(ngModel)]="text" (keyup.enter)="send(text)"/>
     </mat-form-field>
-    <button mat-mini-fab (click)="send(box.value)">
+    <button mat-mini-fab class="button-infix" (click)="send(box.value)">
         <mat-icon>send</mat-icon>
     </button>
 </mat-card>
