--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -13,7 +13,7 @@
         </div>
         <div fxFlex>
           <div class="view-exercise-chat">
-           <app-chat-exercise *ngIf="exercise" [exercise] = "exercise"></app-chat-exercise>
+           <app-chat-exercise class="input" *ngIf="exercise" [exercise] = "exercise"></app-chat-exercise>
           </div>
         </div>
       </div>
