--- a/src/app/student/lesson/interaction.component.html
+++ b/src/app/student/lesson/interaction.component.html
@@ -6,7 +6,7 @@
         <div class="button-options">
           <button mat-raised-button matStepperNext color="primary">Siguiente</button>
         </div>
-        <h3>Bienvenido! a la lección de {{lessonName}}</h3>
+        <h3>Bienvenido a la lección de {{lessonName}}!</h3>
       </form>
     </mat-step>
     <mat-step *ngFor="let interaction of interactions">
