--- a/src/app/shared/chat-exercise/chat-exercise.component.css
+++ b/src/app/shared/chat-exercise/chat-exercise.component.css
@@ -10,7 +10,7 @@
 }
 
 .infix {
-  width: 19em;
+  width: 100%;
   padding-left: 3%;
 }
 
@@ -20,4 +20,8 @@
 
 mat-icon {
   color: #eeeeee;
+}
+
+.space-input {
+  width: inherit;
 }
