--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,13 +1,16 @@
 <div class="layout-alignment"></div>
 <div id="separator-line" fxLayout="row" fxLayoutGap="20px">
+  <div class="layout-alignment"></div>
   <div fxFlex>
     <app-graph-unit #graphUnitComponent (openUnit)="openUnit($event)"></app-graph-unit>
     <app-exercise-unit #exerciseUnitComponent [exercise] = "exercise" ></app-exercise-unit>
     <app-video-unit #videoUnitComponent [video] = "video"></app-video-unit>
   </div>
+  <div class="layout-alignment"></div>
   <div fxFlex>
-    <app-info-unit *ngIf="unit" [exerciseUnitComponent]="exerciseUnitComponent" [graphUnitComponent] = "graphUnitComponent" 
+    <app-info-unit *ngIf="unit" [exerciseUnitComponent]="exerciseUnitComponent" [graphUnitComponent] = "graphUnitComponent"
     [videoUnitComponent]="videoUnitComponent" [unit] = "unit" (openExercise)="openExercise($event)" (openVideo)="openVideo($event)"></app-info-unit>
   </div>
+  <div class="layout-alignment"></div>
 </div>
 <router-outlet></router-outlet>
